--- a/learning_logs/templates/learning_logs/index.html
+++ b/learning_logs/templates/learning_logs/index.html
@@ -1,3 +1,7 @@
-<p>Learning Diary</p>
+{% extends "learning_logs/base.html" %}
 
-<p>Learning diary helps you to keep track of your learning, for any topic you are interested in.</p>
+{% block content %}
+  <p>Learning Diary</p>
+
+  <p>Learning diary helps you to keep track of your learning, for any topic you are interested in.</p>
+{% endblock content %}
