--- a/learning_logs/templates/learning_logs/base.html
+++ b/learning_logs/templates/learning_logs/base.html
@@ -1,5 +1,6 @@
 <p>
-    <a href="{% url 'learning_logs:index' %}">Learning Diary</a>
+    <a href="{% url 'learning_logs:index' %}">Learning Diary</a> -
+    <a href="{% url 'learning_logs:topics' %}">Topics</a>
 </p>
 
 {% block content %}{% endblock content %}
